fixed whitespace error handling in form submission, added pointer to compose button

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -39,4 +39,5 @@ nav {
 #nav-bar .buttons:hover {
   background-color: white;
   color: black;
+  cursor: pointer;
 }
